# halo2-practice

./: Cargo.toml  README.md
src/: lib.rs
src/chips/: inclusion_check.rs  mod.rs
src/examples/: inclusion_check.rs
